--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,7 @@ ignore_missing_imports = true
 show_error_codes = true
 warn_unused_configs = true
 pretty = true
-files = ["app"]
+files = ["auth/fastapi_components_auth"]
 check_untyped_defs = true
 disallow_untyped_calls = true
 disallow_incomplete_defs = true
