--- a/auth/.pre-commit-config.yaml
+++ b/auth/.pre-commit-config.yaml
@@ -3,6 +3,7 @@ repos:
     rev: 23.9.1  # Use latest stable version
     hooks:
       - id: black
+        files: ^auth/
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0  # Use a specific compatible version
