--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
     rev: 23.9.1  # Use latest stable version
     hooks:
       - id: black
-        files: .
+        args: [.]
 
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: v1.8.0  # Use a specific compatible version
