--- a/auth/pyproject.toml
+++ b/auth/pyproject.toml
@@ -13,6 +13,8 @@ fastapi = "^0.116.1"
 passlib = "^1.7.4"
 python-jose = "^3.3.0"
 tree = "^0.2.4"
+jwt = "^1.4.0"
+pyjwt = "^2.10.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
